# VDT2026

./: .gitignore  CMakeLists.txt  README.md
diagrams/: Copy of Old Architecture.drawio  New Architecture.drawio  Old Architecture.drawio  Protocol.drawio  QAbstractListModel.drawio  Socket receive.drawio  VDT architecture.drawio  VDT.vpp  VDT.vpp.bak_000f  VDT.vpp.bak_001d  VDT.vpp.bak_002d  VDT.vpp.bak_003d  VDT.vpp.bak_004d  VDT.vpp.bak_005d  VDT.vpp.bak_006d  VDT.vpp.bak_007d  VDT.vpp.bak_008d  VDT.vpp.bak_009d  VDT.vpp.bak_010d  VDT.vpp.bak_011d  VDT.vpp.bak_012d  VDT.vpp.bak_013d  VDT.vpp.bak_014d
emulated_client/: config.py  main.py
script/: Schema.sql
scripts/: data_delay.py
src/: CMakeLists.txt  main.cpp
src/dao/: BaseDAO.cpp  BaseDAO.h  ShipDAO.cpp  ShipDAO.h  ShipRadarInfoDAO.cpp  ShipRadarInfoDAO.h  WatchPolygonDAO.cpp  WatchPolygonDAO.h
src/model/: ShipModel.cpp  ShipModel.h  ShipRadarInfoItemModel.cpp  ShipRadarInfoItemModel.h  ShipRadarInfoModel.cpp  ShipRadarInfoModel.h  WatchPolygonModel.cpp  WatchPolygonModel.h
src/provider/: DialogProvider.cpp  DialogProvider.h  NotificationProvider.cpp  NotificationProvider.h  ShipRadarInfoProvider.cpp  ShipRadarInfoProvider.h  WatchPolygonProvider.cpp  WatchPolygonProvider.h
src/resources/: README.md  gisVDT.desktop
src/resources/packaging/: gisVDT.desktop  postin.sh  postun.sh
src/socket/: ClientHandler.cpp  ClientHandler.h  Server.cpp  Server.h
src/socket/runnable/: ReadHandler.cpp  ReadHandler.h
src/ui/: AppDialog.qml  AppMenuBar.qml  AppStatusBar.qml  AppToolBar.qml  CMakeLists.txt  Main.qml  MainMap.qml  NoticeDialog.qml  Preferences.qml
src/ui/components/: AppStatusBar.qml  AppToolBar.qml  MainMap.qml  MapSelectionHandler.qml  MapShipIndicator.qml  MapShipView.qml
src/ui/map/: MainMap.qml  MapInfoPopup.qml  MapNotification.qml  MapPolygonSelectionHandler.qml  MapRectSelectionHandler.qml  MapSelectionHandler.qml  MapShipIndicator.qml  MapShipView.qml  MapWatchPolygonView.qml  MapWatchView.qml
src/ui/model/: ShipRadarInfoItemModel.cpp  ShipRadarInfoItemModel.h
src/utils/: WKBConverter.cpp  WKBConverter.h
